# AI-Meeting-Summarizer

./: .env.example  .gitignore  AI_Meeting_Summarizer_SRS_and_Claude_Execution_Blueprint.txt  Building AI Meeting Summarizer.md  Developing AI Meeting Summarizer.md  Dockerfile  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/api/: auth.py  meetings.py  settings_api.py
backend/config/: constants.py  settings.py
backend/core/: __init__.py  exceptions.py  schemas.py
backend/database/: __init__.py  session.py
backend/models/: audit.py  base.py  meeting.py  settings.py  user.py
backend/prompts/: summarize.py
backend/repositories/: __init__.py  meeting_repo.py  user_repo.py
backend/security/: __init__.py  dependencies.py  jwt_handler.py  password.py  rate_limiter.py
backend/services/: ai_provider.py  export_service.py  meeting_service.py  summarization_service.py  transcript_cleaner.py  transcription_service.py  upload_service.py
backend/storage/: __init__.py  local_storage.py
backend/tests/: conftest.py  test_auth.py  test_integration.py  test_meetings.py  verify.py
docs/: api_guide.md  architecture.md  contributing.md  deployment_guide.md  developer_guide.md
frontend/: index.html  nginx.conf  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.css  Layout.tsx  Navbar.css  Navbar.tsx  Sidebar.css  Sidebar.tsx
frontend/src/lib/: api.ts  auth.tsx
(+10 files in other folders)
